...

        <TextView
            android:id="@+id/textview_result"
            android:layout_width="0dp"
            android:layout_height="0dp"
...

                <com.mj.calculatorapp.presentation.main.calculator.CalculatorButton
                    android:id="@+id/button_history"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                <com.mj.calculatorapp.presentation.main.calculator.CalculatorButton
                    android:id="@+id/button_ac"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                <com.mj.calculatorapp.presentation.main.calculator.CalculatorButton
                    android:id="@+id/button_divide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                <com.mj.calculatorapp.presentation.main.calculator.CalculatorButton
                    android:id="@+id/button_multiply"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                <com.mj.calculatorapp.presentation.main.calculator.CalculatorButton
                    android:id="@+id/button_5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                <com.mj.calculatorapp.presentation.main.calculator.CalculatorButton
                    android:id="@+id/button_6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                <com.mj.calculatorapp.presentation.main.calculator.CalculatorButton
                    android:id="@+id/button_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                <com.mj.calculatorapp.presentation.main.calculator.CalculatorButton
                    android:id="@+id/button_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                <com.mj.calculatorapp.presentation.main.calculator.CalculatorButton
                    android:id="@+id/button_plus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                <com.mj.calculatorapp.presentation.main.calculator.CalculatorButton
                    android:id="@+id/button_dot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                <com.mj.calculatorapp.presentation.main.calculator.CalculatorButton
                    android:id="@+id/button_result"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintlayout_history"
            android:layout_width="0dp"
            android:layout_height="0dp"
...

            <ImageView
                android:id="@+id/imageview_close"
                android:layout_width="50dp"
                android:layout_height="50dp"
...

            <ImageView
                android:id="@+id/imageview_delete"
                android:layout_width="50dp"
                android:layout_height="50dp"
...

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_history"
                android:layout_width="0dp"
                android:layout_height="0dp"
...
